public/css/styles.css
html {
    height: 100%;
}
body {
    height: 100%;
}

table{
    white-space: nowrap;
}

table th:last-child,
table td:last-child{
    text-align: right;
}

.clickable-row{
    cursor: pointer;
}

.clickable-column {
    cursor: pointer;
}

.button-navbar{
    color: #2C6F94;
    text-align: center;
}
.button-navbar:hover,
.button-navbar:active,
.button-navbar:focus{
    font-size: 103% !important;
    color: #2C6F94;
}

.navbar-background{
    background-color: #4ABFFF;
    color: #2C6F94 !important;
}


.navbar-light .nav-link{
    color: rgba(0,0,0,.5) !important;
}
.dropdown-menu{
    min-width: 20rem;
}
.dropdown-header{
    padding: 0.5rem 1.5rem;
    font-size: 1.2rem;
}
.dropdown-divider{
    margin: 0;
}
.dropdown-item{
    padding: .6rem 1.5rem;
}

.dropdown-toggle-without::after {
    display:none
}

.dropdown-item:active,
.dropdown-item:hover,
.dropdown-item:focus{
    background-color: #abe1ff !important;
}

.notification-date{
    font-size: 0.7rem;
    color: grey;
}

.pright {
    margin-bottom: 0;
    text-align: right;
}

.navicon{
    height: 2.5rem;
    align-self: center;
}
.navicon:hover,
.navicon:active,
.navicon:focus {
    height: 2.6rem;
}

.auto-expand{
    box-sizing: border-box;
    resize: none;
}

.pointer-events-none{
    pointer-events: none;
}

.btn-dark {
    color: #FFFFFF;
    background-color: #2C6F94;
    border-color: #00468C;
}

.btn-dark:hover,
.btn-dark:focus,
.btn-dark:active,
.btn-dark.active,
.open .dropdown-toggle.btn-dark {
    color: #FFFFFF;
    background-color: #1D4459;
    border-color: #00468C;
}

.btn-dark:active,
.btn-dark.active,
.open .dropdown-toggle.btn-dark {
    background-image: none;
}

.btn-dark.disabled,
.btn-dark[disabled],
fieldset[disabled] .btn-dark,
.btn-dark.disabled:hover,
.btn-dark[disabled]:hover,
fieldset[disabled] .btn-dark:hover,
.btn-dark.disabled:focus,
.btn-dark[disabled]:focus,
fieldset[disabled] .btn-dark:focus,
.btn-dark.disabled:active,
.btn-dark[disabled]:active,
fieldset[disabled] .btn-dark:active,
.btn-dark.disabled.active,
.btn-dark[disabled].active,
fieldset[disabled] .btn-dark.active {
    background-color: #2C6F94;
    border-color: #00468C;
}

.btn-dark .badge {
    color: #2C6F94;
    background-color: #FFFFFF;
}

.clearfix {
    overflow: auto;
    text-align: center;
    font-size: 20vh;
    padding: 5vh;
}

.logo {
    width: 60%;
    height: 20vh;
    margin: 0;
}

.autocomplete {
    /*the container must be positioned relative:*/
    position: relative;
    display: inline-block;
}

.autocomplete-items {
    position: absolute;
    border: 1px solid #d4d4d4;
    border-bottom: none;
    border-top: none;
    z-index: 99;
    /*position the autocomplete items to be the same width as the container:*/
    top: 100%;
    left: 0;
    right: 0;
}
.autocomplete-items div {
    padding: 10px;
    cursor: pointer;
    background-color: #fff;
    border-bottom: 1px solid #d4d4d4;
}
.autocomplete-items div:hover {
    /*when hovering an item:*/
    background-color: #e9e9e9;
}
.autocomplete-active {
    /*when navigating through the items using the arrow keys:*/
    background-color: DodgerBlue !important;
    color: #ffffff;
}
.scrollable-menu {
    height: auto;
    max-height: 600px;
    overflow-x: hidden;
}

.fit-content-width{
    min-width: fit-content;
}

